Fixed compilation errors after refactor. Separated Chessboard, ChessboardController and Chessboard Rules

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,4 +83,6 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Chess.ChessData.TypeToActor",NewName="/Script/Chess.ChessData.FigureToMesh")
 +ClassRedirects=(OldName="/Script/Chess.AChessController",NewName="/Script/Chess.ChessController")
++ClassRedirects=(OldName="/Script/Chess.ChessboardMovement",NewName="/Script/Chess.ChessboardController")
++PropertyRedirects=(OldName="/Script/Chess.ChessPiece.MovementVeryfier",NewName="/Script/Chess.ChessPiece.MovementVerifier")
 
