--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,6 +56,9 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.VirtualTextures=True
+r.VT.AnisotropicFiltering=True
+r.VT.TileSize=256
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
