--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,6 +59,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.VirtualTextures=True
 r.VT.AnisotropicFiltering=True
 r.VT.TileSize=256
+r.Streaming.PoolSize=2048
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
