--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,13 +51,22 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
-r.GenerateMeshDistanceFields=True
+r.GenerateMeshDistanceFields=False
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.Streaming.PoolSize=3048
-r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=True
+r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
+r.Lumen.TraceMeshSDFs=0
+r.RayTracing=False
+r.RayTracing.Skylight=True
+r.NormalMapsForStaticLighting=False
+r.ForwardShading=False
+r.AntiAliasingMethod=4
+r.MSAACount=4
+r.Shadow.CSMCaching=False
+r.MeshStreaming=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
