Some more optimization and foliage changes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,7 +51,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
-r.GenerateMeshDistanceFields=False
+r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
@@ -67,6 +67,7 @@ r.AntiAliasingMethod=4
 r.MSAACount=4
 r.Shadow.CSMCaching=False
 r.MeshStreaming=False
+r.Lumen.HardwareRayTracing=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
