--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,6 +76,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Chess")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Chess")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ChessGameModeBase")
+NearClipPlane=1.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
