Changed game settings to include custom data

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,6 +77,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Chess")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ChessGameModeBase")
 NearClipPlane=1.000000
+GameUserSettingsClassName=/Script/Chess.ChessGameUserSettings
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
