Working Game reset and return to menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/Global/BP_ChessGameInstance.BP_ChessGameInstance_C
 GameDefaultMap=/Game/Levels/ChessMainLevel.ChessMainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/Global/BP_ChessGameMode.BP_ChessGameMode_C
